// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redo expect to render correctly 1`] = `
<div
  className="ais-GeoSearch-control"
>
  <button
    className="ais-GeoSearch-redo ais-GeoSearch-redo--disabled"
    disabled={true}
    onClick={[Function]}
  >
    redo
  </button>
</div>
`;

exports[`Redo expect to render correctly when map has moved 1`] = `
<div
  className="ais-GeoSearch-control"
>
  <button
    className="ais-GeoSearch-redo"
    disabled={false}
    onClick={[Function]}
  >
    redo
  </button>
</div>
`;
